...
        ZStack {
            BackgroundView()

            Form {
                VStack {
                    TitleFormView(text: "Register")
                        .accessibilityIdentifier("Register title")

                    UsernameFormView(text: $viewModel.username)
                    EmailFormView(text: $viewModel.emailAddress)
                    DateOfBirthFormView(date: $viewModel.dateOfBirth,
                                        allowedRange: viewModel.dateOfBirthRange)
                    Spacer(minLength: 15.0)

                    Button("Register") {
                        viewModel.register()
                    }
                    .accessibilityIdentifier("Register button")
                    .modifier(CustomRoundedStyle())
                    .disabled(!viewModel.isValid)
                    .opacity(viewModel.isValid ? 1 : 0.5)

                    Spacer(minLength: 10.0)

...
